--- a/project-a/index.html
+++ b/project-a/index.html
@@ -9,7 +9,7 @@ CCLaboratories Biodiversity Atlas
 <html>
 
 <head>
-    <title>[ Petal Symphony ]</title>
+    <title>Petal Symphony</title>
 
     <!-- allow special characters, including Arabic, Chinese, Korean, Japanese, etc. -->
     <meta charset="UTF-8">
@@ -44,7 +44,7 @@ CCLaboratories Biodiversity Atlas
 
                 <h3 class="green">Family:</h3>
                 <p> Floralist Mutatio belongs to the generative floral family where they are a mutation of the actual flower. 
-                    Where they are found by a scientist as they are doing research on the blooming season of the flowers. </p>
+                    They are found by a scientist as they are doing research on the blooming season of the flowers. </p>
             </div>
             <div class="right">
                 <h3 class="green">Habitat:</h3>
@@ -56,10 +56,10 @@ CCLaboratories Biodiversity Atlas
 
                 <h3 class="green">Key Characteristics:</h3>
                 <ul>
-                    <li>Flies in the dark.</li>
-                    <li>Eats metal.</li>
-                    <li>(keep them short!)</li>
-                    <li>...</li>
+                    <li>Breaths rhythmically, creating a lifelike motion</li>
+                    <li>Mutates in color, size, and petal shape with every</li>
+                    <li>Each click is a surprise and builds on or grows from the other flower</li>
+                    <li>Mutates with your heart beat</li>
                 </ul>
             </div>
         </div>
@@ -83,7 +83,7 @@ CCLaboratories Biodiversity Atlas
 
     <!-- Footer -->
     <div id="footer" class="black">
-        <p>A CCLab project made by [Your Name] in [Current Semester]</p>
+        <p>A CCLab project made by Sophia Jiang in Fall 2025 </p>
     </div>
 
     <!-- Home: Link back to the ATLAS page-->
