--- a/project-a/index.html
+++ b/project-a/index.html
@@ -16,7 +16,7 @@ CCLaboratories Biodiversity Atlas
     <!-- link the style sheet -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- import p5.js library -->
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.3/lib/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/p5.js"></script>
     <script>
         // prevent scrolling when spacebar and arrow keys are pressed.
         window.addEventListener("keydown", function (e) { if ([32, 37, 38, 39, 40].indexOf(e.keyCode) > -1) { e.preventDefault(); } }, false);
@@ -26,7 +26,7 @@ CCLaboratories Biodiversity Atlas
 <body>
     <!-- title -->
     <div id="title-wrapper">
-        <h1 class="headline black">[ Petal Symphony ]</h1>
+        <h1 class="headline black">Petal Symphony</h1>
     </div>
 
     <!-- main content -->
@@ -40,15 +40,14 @@ CCLaboratories Biodiversity Atlas
                 <p>Floralis Mutatio</p>
 
                 <h3 class="red">Discovered by / at:</h3>
-                <p>Scientist's Name, Time of discovery</p>
+                <p>Chronicled by Sophia Jiang in the year 2025, during her explorations into the coded realms of digital nature.</p>
 
                 <h3 class="green">Family:</h3>
-                <p> Floralist Mutatio belongs to the generative floral family where they are a mutation of the actual flower. 
-                    They are found by a scientist as they are doing research on the blooming season of the flowers. </p>
+                <p> Floralist Mutatio belongs to the The Generative Floral Family, believed to be one of the earliest forms of digital flora, which are organisms that exist in the space between algorithm and imagination. </p>
             </div>
             <div class="right">
                 <h3 class="green">Habitat:</h3>
-                <p>Floralis Mutatio lives in a environment that is splitted up in night and day.</p>
+                <p>Floralis Mutatio lives in a cloudlike </p>
 
                 <h3 class="green">Appearance:</h3>
                 <p>This text is part of the story telling of your project. You created this creature then you can give
@@ -56,27 +55,22 @@ CCLaboratories Biodiversity Atlas
 
                 <h3 class="green">Key Characteristics:</h3>
                 <ul>
-                    <li>Breaths rhythmically, creating a lifelike motion</li>
-                    <li>Mutates in color, size, and petal shape with every</li>
-                    <li>Each click is a surprise and builds on or grows from the other flower</li>
-                    <li>Mutates with your heart beat</li>
+                    <li>Breathes rhythmically, giving it a lifelike, organic motion</li>
+                    <li>Mutates in color, size, and petal shape with every click</li>
+                    <li>Surrounded by glowing background flowers that pulse in harmony</li>
+                    <li>Each click sparks a new evolution</li>
                 </ul>
             </div>
         </div>
         <div class="one-column">
             <p>
-                <span class="yellow">What we know so far about [ NAME OF YOUR CREATURE ]?</span>
-                The giraffe is a large African hoofed mammal belonging to the genus Giraffa. It is the tallest living
-                terrestrial animal and the largest ruminant on Earth. Traditionally, giraffes have been thought of as
-                one species, Giraffa camelopardalis, with nine subspecies. Most recently, researchers proposed dividing
-                them into up to eight extant species due to new research into their mitochondrial and nuclear DNA, as
-                well as morphological measurements. Seven other extinct species of Giraffa are known from the fossil
-                record. (This is from Wikipedia, write the story, history, facts, tales, myths, anecdotes about your
-                creature.)
+                <span class="yellow">What we know so far about Petal Symphony?</span>
+                Ancient digital explorers believed the Petal Symphony was a symbol of infinite creation, a creature that embodies change itself. No appearances are ever the same; each mutation feels like the blooming of a new species. It lives not in time, but in interaction, awakening only when touched by curiosity.
+                
                 <br>
-                <span class="yellow">Guidelines for human interaction with this creature</span> This text can double as
-                fictional part of your story, but could also include instructional aspects on how to interact with your
-                sketch above.
+                
+                <span class="yellow">Guidelines for human interaction with this creature</span> By touching the surface of its world: the canvas, individuals can awaken the Petal Symphony. Each contact brings upon a surprise version of the flower, brighter and more complex than before. The longer one waits before reaching out, the larger and more radiant the bloom becomes, as if itspreparing for its next rebirth.
+
             </p>
         </div>
     </div>
