--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>This is my first web</title> 
 </head>
 <body>
-    </h1>this is my first website, welcome! </h1>
-    <p>my name is Sophia</p>
+    </h1>This is my first website, welcome! </h1>
+    <p>My name is Sophia</p>
    
-    <p>this is my project A</p>
+    <p>This is my project A</p>
      <div id="p5-canvas-container"></div>
 
     <script src="sketch.js"></script>
