--- a/project-a/index.html
+++ b/project-a/index.html
@@ -47,11 +47,10 @@ CCLaboratories Biodiversity Atlas
             </div>
             <div class="right">
                 <h3 class="green">Habitat:</h3>
-                <p>Floralis Mutatio lives in a cloudlike </p>
+                <p>Floralis Mutatio lives in a Pure White Canvas where color and motion coexist in silence.</p>
 
                 <h3 class="green">Appearance:</h3>
-                <p>This text is part of the story telling of your project. You created this creature then you can give
-                    all the information about it.</p>
+                <p>Floralis Mutatio is a flower that does not root in soil but blossoms from pure energy gained through human interaction. Its translucent petals contracts and condenses in slow rhythm, mimicking the act of breathing. In the center rests the small leader creature that is excited for each new human interaction. Surrounding it are smaller celestial blooms, each pulsing gently, responding to the rhythm of their leader creature.</p>
 
                 <h3 class="green">Key Characteristics:</h3>
                 <ul>
@@ -65,10 +64,9 @@ CCLaboratories Biodiversity Atlas
         <div class="one-column">
             <p>
                 <span class="yellow">What we know so far about Petal Symphony?</span>
-                Ancient digital explorers believed the Petal Symphony was a symbol of infinite creation, a creature that embodies change itself. No appearances are ever the same; each mutation feels like the blooming of a new species. It lives not in time, but in interaction, awakening only when touched by curiosity.
-                
+                Ancient digital explorers believed that Petal Symphony was a symbol of infinite creation, a creature that embodies change itself. No appearances are ever the same; each mutation feels like the blooming of a new species. It lives not in time, but in interaction, awakening only when touched by curiosity.
                 <br>
-                
+                </div>
                 <span class="yellow">Guidelines for human interaction with this creature</span> By touching the surface of its world: the canvas, individuals can awaken the Petal Symphony. Each contact brings upon a surprise version of the flower, brighter and more complex than before. The longer one waits before reaching out, the larger and more radiant the bloom becomes, as if itspreparing for its next rebirth.
 
             </p>
