--- a/project-a/index.html
+++ b/project-a/index.html
@@ -67,7 +67,7 @@ CCLaboratories Biodiversity Atlas
                 Ancient digital explorers believed that Petal Symphony was a symbol of infinite creation, a creature that embodies change itself. No appearances are ever the same; each mutation feels like the blooming of a new species. It lives not in time, but in interaction, awakening only when touched by curiosity.
                 <br>
                 </div>
-                <span class="yellow">Guidelines for human interaction with this creature</span> By touching the surface of its world: the canvas, individuals can awaken the Petal Symphony. Each contact brings upon a surprise version of the flower, brighter and more complex than before. The longer one waits before reaching out, the larger and more radiant the bloom becomes, as if itspreparing for its next rebirth.
+                <span class="yellow">Guidelines for human interaction with this creature:</span> By touching the surface of its world: the canvas, individuals can awaken the Petal Symphony. Each contact brings upon a surprise version of the flower, brighter and more complex than before. The longer one waits before reaching out, the larger and more radiant the bloom becomes, as if its preparing for its next rebirth.
 
             </p>
         </div>
