--- a/project-b-protype/index.html
+++ b/project-b-protype/index.html
@@ -27,7 +27,8 @@
       <!-- p5 canvas will be appended here. -->
     </div>
 
-    <p>Project Description</p>
+    <p>Press (+) to zoom in </p>
+    <p>Press (-) to zoom out </p>
   </div>
 
   <!-- the script tag below should always be at the bottom, right before the closing body tag -->
